Fixed text alignment in mynotes page.

--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -23,7 +23,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 body > .container-first {
-  padding: 55px 0px 0;
+  padding: 40px 0px 0;
 }
 .container .text-muted {
   margin: 20px 0;
